# tg-bot-Films

./: main.py  pyproject.toml
app/: __init__.py
app/data/: handler.py
app/keyboards/: film.py
app/routers/: film.py
